crates/bind/tests/compile_fail/trigger_not_into.stderr
error[E0277]: the trait bound `Trig: From<Weird>` is not satisfied
  --> tests/compile_fail/trigger_not_into.rs:39:8
   |
36 | #[derive(Bind)]
   |          ---- required by a bound introduced by this call
...
39 | #[bind(Weird => handler)]
   |        ^^^^^ unsatisfied trait bound
   |
help: the trait `From<Weird>` is not implemented for `Trig`
  --> tests/compile_fail/trigger_not_into.rs:7:1
   |
 7 | struct Trig;
   | ^^^^^^^^^^^
   = note: required for `Weird` to implement `Into<Trig>`
